# Aurras

./: README.md  config.toml  pyproject.toml
aurras/: __init__.py  aurras.py
aurras/core/: model.py  plugins.py  prompt_processing.py
aurras/plugins/datetime/: config.py  plugin.py
aurras/plugins/gemini/: config.py  plugin.py
aurras/plugins/weather/: config.py  plugin.py
